--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,16 @@
 <h1>Articles Listing</h1>
+<%= render 'layouts/messages'%>
+<%= link_to 'Create new Article', new_article_path %>
+<table>
+<tr>
+  <th>Title</th>
+  <th>Description</th>
+</tr>
+<% @articles.each do | article | %>
+<tr>
+  <td><%= article.title %> </td>
+  <td><%= article.description %> </td>
+  <td><%= link_to 'View', article_path(article) %> </td>
+</tr>
+<% end %>
+</table>
