added validation error in partial form

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,11 @@
+<% if @article.errors.any? %> 
+<ul>
+<% @article.errors.full_messages.each do | msg | %>
+<li> <%= msg %></li>
+<% end %>
+</ul>
+<% end %>
 
-<p>
 <%= form_for @article do |f| %>
 <%= f.label :title %> <br/>
 <%= f.text_field :title%>
