--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,7 @@
 
 Title: <%= @article.title %> <br/>
 Description: <%= @article.description %>
+
+
+<br/>
+<%= link_to "Back to articles listing", articles_path %>
