--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1>Home</h1>
+<div class="center jumbotron">
+  <h1>Blogs Exercise</h1>
+  <%= link_to 'Sign up now', "#", class: "btn btn-primary btn-lg" %>
+</div>
 
-<%= link_to 'About', about_path %>
+
