--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$navbar-default-bg: #aaa;
+$navbar-default-bg: #000;
 
 
 @import "bootstrap-sprockets";
@@ -20,4 +20,51 @@ $navbar-default-bg: #aaa;
 
 .center {
     text-align: center;
+}
+
+.jumbotron {
+    background-image: asset-url('new_cover_page.jpeg');
+    background-size: cover;
+    height: 550px;
+
+
+}
+
+.jumbotron h1 {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: -1 px;
+    font-weight: bold;
+}
+
+.btn-xlarge {
+    font-size: 1.7em;
+    background-color: black;
+}
+
+footer {
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top:  1px solid #eaeaea;
+    color: #777;
+
+}
+
+footer a:hover {
+    color: #222;
+}
+
+footer small {
+    float: left;
+}
+
+footer ul {
+    float: right;
+    list-style: none;
+}
+
+footer ul li {
+    float: left;
+    margin-left: 15px;
 }
