--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -89,3 +89,8 @@ footer ul li {
     padding-bottom: 15px;
 
 }
+
+.article-meta-details {
+    border-top: 1px solid #eaeaea;
+    margin: 15px;
+}
