--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,6 +8,12 @@
       </div>
       <div class="article-body">
         <%= truncate(article.description, length: 100) %>
+        <div class="article-meta-details">
+        <small>Created by: <%= article.user.username if article.user %>, 
+              created at: <%= time_ago_in_words(article.created_at) %>, 
+              last updated: <%= time_ago_in_words(article.updated_at) %>
+        </small>
+        </div>
       </div>
       <div class="article-actions">
         <%= link_to "Edit", edit_article_path(article), class: "btn btn-xs btn-primary" %>
