--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,6 @@
 <h2 align="center">Title: <%= @article.title %> </h2>
 <div class="well col-xs-8 col-xs-offset-2">
+<% if @article.user %>
 <ul class="listing">
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
@@ -10,6 +11,7 @@
       </div>
     </div>
   </ul>
+  <% end %>
   <h4 class="center description"><strong> Description </strong> </h4>
   <hr>
    <%= simple_format(@article.description) %>
