--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,6 +10,12 @@
         </div>
       </div>
       <div class='form-group'>
+        <%= f.label :subdomain, class: "control-label col-sm-2" %>
+        <div class='col-sm-8'>
+          <%= f.text_field :subdomain, class: "form-control", placeholder: "Enter subdomain", autofocus: true %>
+        </div>
+      </div>
+      <div class='form-group'>
         <%= f.label :email, class: "control-label col-sm-2"%>
         <div class='col-sm-8'>
           <%= f.email_field :email, class: "form-control", placeholder: "Enter email" %>
