--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,20 @@
 <div class="container">
+
+ <br/>
+    <% session.each do | name, msg | %>
+      <ul>
+        
+        <li><%= name %></li>
+        <li><%= msg %> </li>
+        
+      </ul>
+      <% end %>
   <footer class="footer">
     <small>
       Copyright &copy; Melferium
 
     </small>
-    <nav>
-      <ul>
-        <li><%= link_to 'About', about_path %> </li>
-      </ul>
-    </nav>
+   
+
   </footer>
 </div>
