prep dev deploy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,15 @@
 <div class="center jumbotron">
   <h1>Blogs Exercise</h1>
   <%= link_to 'Sign up now', signup_path , class: "btn btn-danger btn-lg btn-xlarge" %>
+  
 </div>
+
+<br/>
+  <p>request domain: <%= request.domain %> </p>
+  <p>request host: <%= request.host %> </p>
+  <p>request subdomain: <%= request.subdomain %> </p>
+
+  
+
 
 
